--- a/package.json
+++ b/package.json
@@ -1,1 +1,13 @@
-
+{
+  "name": "notify",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "firebase-admin": "^11.5.0",
+    "expo-server-sdk": "^3.7.0",
+    "dotenv": "^16.0.3"
+  }
+}
