--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dotenv": "^16.0.0",
     "expo-server-sdk": "^3.14.0",
     "firebase-admin": "^11.0.0",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
